--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <title>Drag-And-Drop</title>
 </head>
 <body>
-    
+    <div class="empty">
+        <div class="filled" draggable="true"></div>
+    </div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
     <script src="js/main.js"></script>
 </body>
 </html>
